--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: "Courier New", Courier, monospace;
   background: linear-gradient(89deg, #c2e59c 0%, #64b3f4 100%);
+  height: 100% !important;
 }
 
 button {
