changed bounding box

--- a/src/components/facerec/FaceRecognition.css
+++ b/src/components/facerec/FaceRecognition.css
@@ -14,10 +14,10 @@
   cursor: pointer;
 }
 
-.sheep-box {
-  position: absolute;
-  /* box-shadow: 0 0 0 3px #149df2 inset; */
-  cursor: pointer;
+/* .sheep-box {
+  position: absolute; */
+/* box-shadow: 0 0 0 3px #149df2 inset; */
+/* cursor: pointer;
   overflow: visible;
 
   display: -ms-flexbox;
@@ -37,4 +37,6 @@
   max-width: 1000% !important;
   max-height: 1000% !important;
   position: absolute;
-}
+} */
+
+/* testing */
